PROJECT(leetcode)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

SET(CMAKE_VERBOSE_MAKEFILE TRUE)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wnon-virtual-dtor -Wctor-dtor-privacy")

ADD_SUBDIRECTORY(add_two_numbers)
ADD_SUBDIRECTORY(basic_calculator_II)
ADD_SUBDIRECTORY(binary_tree_postorder_traversal)
ADD_SUBDIRECTORY(binary_tree_right_side_view)
ADD_SUBDIRECTORY(bitwise_and_of_number)
ADD_SUBDIRECTORY(count_primes)
ADD_SUBDIRECTORY(evaluate_reverse_polish_notation)
ADD_SUBDIRECTORY(find-k-pairs-with-smallest-sums)
ADD_SUBDIRECTORY(find_minimum_in_rotated_sorted_array)
ADD_SUBDIRECTORY(guess_number_higher_or_lower)
ADD_SUBDIRECTORY(happy_number)
ADD_SUBDIRECTORY(insertion_sortlist)
ADD_SUBDIRECTORY(invert_binary_tree)
ADD_SUBDIRECTORY(isomorphic_strings)
ADD_SUBDIRECTORY(linked_list_cycle)
ADD_SUBDIRECTORY(linked-list-cycleII)
ADD_SUBDIRECTORY(longest_substring)
ADD_SUBDIRECTORY(minimum_size_subarray_sum)
ADD_SUBDIRECTORY(min_stack)
ADD_SUBDIRECTORY(remove_linked_list_elements)
ADD_SUBDIRECTORY(reorder_list)
ADD_SUBDIRECTORY(reverse_linked_list)
ADD_SUBDIRECTORY(reverse_nodes_in_kgroup)
ADD_SUBDIRECTORY(reverse_words_in_a_string)
ADD_SUBDIRECTORY(search_for_a_range)
ADD_SUBDIRECTORY(single_number)
ADD_SUBDIRECTORY(single_numberII)
ADD_SUBDIRECTORY(word_search_II)
ADD_SUBDIRECTORY(zigzag_conversion)
